# lib/server/routes/users.js
@@ -219,6 +219,104 @@ UsersRouter.prototype.confirmDestroyUser = function(req, res, next) {
 };
 
 /**
+ * Creates a password reset token
+ * @param {http.IncomingMessage} req
+ * @param {http.ServerResponse} res
+ * @param {Function} next
+ */
+UsersRouter.prototype.createPasswordResetToken = function(req, res, next) {
+  const User = this.storage.models.User;
+
+  if (Buffer(req.body.password, 'hex').length * 8 !== 256) {
+    return callback(new Error('Password must be hex encoded SHA-256 hash'));
+  }
+
+  log.info('creating password reset token for %s', req.user._id);
+
+  User.findOne({ _id: req.params.id }, function(err, user) {
+    if (err) {
+      return next(new errors.InternalError(err.message));
+    }
+
+    if (!user) {
+      return next(new errors.NotFoundError());
+    }
+
+    if (req.user.id !== user.id) {
+      return next(new errors.NotAuthorizedError());
+    }
+
+    user.resetter = crypto.randomBytes(256).toString('hex');
+    user._pendingHashPass = req.body.password;
+
+    user.save(function(err) {
+      if (err) {
+        return next(new errors.InternalError(err.message));
+      }
+
+      let profile = self.config.server.public || self.config.server;
+      let host = profile.host;
+      let port = [443, 80].indexOf(profile.port) === -1 ?
+                 ':' + profile.port :
+                 '';
+      let proto = self.config.server.ssl &&
+                  self.config.server.ssl.cert &&
+                  self.config.server.ssl.key ?
+                  'https:' :
+                  'http:';
+
+      self.mailer.dispatch(user.email, 'reset', {
+        token: user.resetter,
+        redirect: req.body.redirect,
+        url: proto + '//' + host + port
+      }, function(err) {
+        if (err) {
+          log.error('failed to send reset email, reason: %s', err.message);
+        }
+
+        res.status(200).send(user.toObject());
+      });
+    });
+  });
+};
+
+/**
+ * Confirms and applies the password reset
+ * @param {http.IncomingMessage} req
+ * @param {http.ServerResponse} res
+ * @param {Function} next
+ */
+UsersRouter.prototype.confirmPasswordReset = function(req, res, next) {
+  const User = this.storage.models.User;
+
+  User.findOne({ resetter: req.params.token }, function(err, user) {
+    if (err) {
+      return next(new errors.InternalError(err.message));
+    }
+
+    if (!user) {
+      return next(new errors.NotFoundError());
+    }
+
+    user.hashpass = user._pendingHashPass;
+    user._pendingHashPass = null;
+    user.resetter = null;
+
+    user.save(function(err) {
+      if (err) {
+        return next(new errors.InternalError(err.message));
+      }
+
+      if (req.query.redirect) {
+        res.redirect(req.query.redirect);
+      } else {
+        res.send(user.toObject());
+      }
+    });
+  });
+};
+
+/**
  * Export definitions
  * @private
  */
@@ -227,7 +325,9 @@ UsersRouter.prototype._definitions = function() {
     ['POST', '/users', rawbody, this.createUser ],
     ['GET', '/activations/:token', this.confirmActivateUser],
     ['DELETE', '/users/:id', this._verify, this.destroyUser],
-    ['GET', '/deactivations/:token', this.confirmDestroyUser]
+    ['GET', '/deactivations/:token', this.confirmDestroyUser],
+    ['PATCH', '/users/:id', this._verify, this.createPasswordResetToken],
+    ['GET', '/resets/:token', this.confirmPasswordReset]
   ];
 };
 
